# report-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: mcp_servers.json
archive/: check_numbering.py  fill_user_template.py  inspect_user_template.py  poc_proposal_test.py  rewrite_as_weather.py  show_result.py  smoke_test.py
patches/: document_processor_edited_cumulation.patch
src/report_mcp/: __init__.py  __main__.py  documents.py  errors.py  inputs.py  length.py  patches.py  pipeline.py  postprocess.py  responses.py  server.py  session.py
tests/: probe_edge_cases.py  probe_hwpx_postprocess.py  probe_pdf_input.py  probe_real_defects.py  probe_round_five.py  probe_round_four.py  probe_round_three.py  probe_round_two.py  probe_stdio_bytes.py  test_bytes_io.py  test_length_guardrail.py  test_mcp_production_ready.py  test_v2_improvements.py  verify_patch_no_batching.py
